Fix multi-select wrapping issue

--- a/packages/assets/css/src/scss/_components/_select/_elements/_build-control.scss
+++ b/packages/assets/css/src/scss/_components/_select/_elements/_build-control.scss
@@ -91,7 +91,6 @@
 					padding-top: $spacing-sm;
 					padding-bottom: $spacing-sm;
 					padding-left: $spacing-md;
-					white-space: nowrap;
 					margin: 0;
 				}
 
